objects/Assignee__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Assignee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Email_ID__c</columns>
        <columns>Job_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignees</pluralLabel>
    <recordTypes>
        <fullName>External_User</fullName>
        <active>true</active>
        <label>External User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_User</fullName>
        <active>true</active>
        <label>Internal User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>